--- a/Front-End/src/app/author/author-list/author-list.component.html
+++ b/Front-End/src/app/author/author-list/author-list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Listado de Categorías</h1>
+  <h1>Listado de Autores</h1>
 
   <mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="id">
@@ -8,18 +8,23 @@
       </ng-container>
 
       <ng-container matColumnDef="name">
-          <mat-header-cell *matHeaderCellDef> Nombre categoría  </mat-header-cell>
+          <mat-header-cell *matHeaderCellDef> Nombre autor  </mat-header-cell>
           <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="nationality">
+          <mat-header-cell *matHeaderCellDef> Nacionalidad  </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.nationality}} </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="action">
           <mat-header-cell *matHeaderCellDef></mat-header-cell>
           <mat-cell *matCellDef="let element">
-              <button mat-icon-button color="primary" (click)="editCategory(element)">
-                <mat-icon>edit</mat-icon>
+              <button mat-icon-button color="primary" (click)="editAuthor(element)">
+                  <mat-icon>edit</mat-icon>
               </button>
-              <button mat-icon-button color="accent" (click)="deleteCategory(element)">
-                <mat-icon>clear</mat-icon>
+              <button mat-icon-button color="accent" (click)="deleteAuthor(element)">
+                  <mat-icon>clear</mat-icon>
               </button>
           </mat-cell>
       </ng-container>
@@ -28,7 +33,9 @@
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 
+  <mat-paginator (page)="loadPage($event)" [pageSizeOptions]="[5, 10, 20]" [pageIndex]="pageNumber" [pageSize]="pageSize" [length]="totalElements" showFirstLastButtons></mat-paginator>
+
   <div class="buttons">
-      <button mat-flat-button color="primary" (click)="createCategory()">Nueva categoría</button>
+      <button mat-flat-button color="primary" (click)="createAuthor()">Nuevo autor</button>
   </div>
 </div>
