Se ha terminado las partes 'hechas' del tutorial. Se está comenzando con los clientes. Ya se han realizado los endpoints y se ha hecho el front para que aparezcan correctamente en el listado.

--- a/Front-End/src/app/author/author-list/author-list.component.html
+++ b/Front-End/src/app/author/author-list/author-list.component.html
@@ -33,7 +33,7 @@
       <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 
-  <mat-paginator (page)="loadPage($event)" [pageSizeOptions]="[5, 10, 20]" [pageIndex]="pageNumber" [pageSize]="pageSize" [length]="totalElements" showFirstLastButtons></mat-paginator>
+  <mat-paginator (page)="loadPage($event)" [pageSizeOptions]="[5, 10, 20]" [pageIndex]="pageable.pageNumber" [pageSize]="pageable.pageSize" [length]="totalElements" showFirstLastButtons></mat-paginator>
 
   <div class="buttons">
       <button mat-flat-button color="primary" (click)="createAuthor()">Nuevo autor</button>
