--- a/Front-End/src/app/client/client-edit/client-edit.component.html
+++ b/Front-End/src/app/client/client-edit/client-edit.component.html
@@ -1,1 +1,26 @@
-<p>client-edit works!</p>
+<div class="container">
+  @if (client.id) {
+      <h1>Modificar autor</h1>
+  } @else {
+      <h1>Crear autor</h1>
+  }
+
+  <form>
+      <mat-form-field>
+          <mat-label>Identificador</mat-label>
+          <input type="text" matInput placeholder="Identificador" [(ngModel)]="client.id" name="id" disabled>
+      </mat-form-field>
+
+      <mat-form-field>
+          <mat-label>Nombre</mat-label>
+          <input type="text" matInput placeholder="Nombre del client" [(ngModel)]="client.name" name="name" required>
+          <mat-error>El nombre no puede estar vacío</mat-error>
+      </mat-form-field>
+
+  </form>
+
+  <div class="buttons">
+      <button mat-stroked-button (click)="onClose()">Cerrar</button>
+      <button mat-flat-button color="primary" (click)="onSave(client)">Guardar</button>
+  </div>
+</div>
