--- a/Front-End/src/app/loan/loan-list/loan-list.component.html
+++ b/Front-End/src/app/loan/loan-list/loan-list.component.html
@@ -29,7 +29,7 @@
           [(ngModel)]="filterDate"
           name="date"
         />
-        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-hint>DD/MM/YYYY</mat-hint>
         <mat-datepicker-toggle
           matIconSuffix
           [for]="picker"
