--- a/Front-End/src/app/loan/loan-edit/loan-edit.component.html
+++ b/Front-End/src/app/loan/loan-edit/loan-edit.component.html
@@ -5,7 +5,7 @@
   <h1>Crear préstamo</h1>
   }
 
-  <form>
+  <form #loanForm="ngForm">
     <mat-form-field>
       <mat-label>Identificador</mat-label>
       <input
@@ -20,31 +20,39 @@
 
     <mat-form-field>
       <mat-label>Título</mat-label>
-      <mat-select disableRipple [(ngModel)]="loan.game" name="game">
+      <mat-select disableRipple [(ngModel)]="loan.game" name="game" required>
         @for (game of games; track game.id) {
         <mat-option [value]="game">{{ game.title }}</mat-option>
         }
       </mat-select>
+      <mat-error>El título no puede estar vacío</mat-error>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Cliente</mat-label>
-      <mat-select disableRipple [(ngModel)]="loan.client" name="client">
+      <mat-select
+        disableRipple
+        [(ngModel)]="loan.client"
+        name="client"
+        required
+      >
         @for (client of clients; track client.id) {
         <mat-option [value]="client">{{ client.name }}</mat-option>
         }
       </mat-select>
+      <mat-error>El cliente no puede estar vacío</mat-error>
     </mat-form-field>
 
     <mat-form-field>
       <mat-label>Rango de fechas</mat-label>
-      <mat-date-range-input [rangePicker]="rangePicker">
+      <mat-date-range-input [rangePicker]="rangePicker" required>
         <input
           matInput
           matStartDate
           [(ngModel)]="dateStart"
           placeholder="Fecha de inicio"
           name="dateStart"
+          required
         />
         <input
           matInput
@@ -52,19 +60,30 @@
           [(ngModel)]="dateEnd"
           placeholder="Fecha de fin"
           name="dateEnd"
+          required
         />
       </mat-date-range-input>
-      <mat-hint>DD/MM/YYYY</mat-hint>
+      <mat-error>La fecha no puede estar vacía</mat-error>
       <mat-datepicker-toggle
         matIconSuffix
         [for]="rangePicker"
       ></mat-datepicker-toggle>
       <mat-date-range-picker #rangePicker></mat-date-range-picker>
     </mat-form-field>
+    <mat-error *ngIf="!isLessThan4DaysApart()">
+      El rango debe ser de menos de 14 días
+    </mat-error>
   </form>
 
   <div class="buttons">
     <button mat-stroked-button (click)="onClose()">Cerrar</button>
-    <button mat-flat-button color="primary" (click)="onSave(loan)">Guardar</button>
+    <button
+      mat-flat-button
+      color="primary"
+      (click)="onSave(loan)"
+      [disabled]="!loanForm.form.valid || !isLessThan4DaysApart()"
+    >
+      Guardar
+    </button>
   </div>
 </div>
