Cliente: Se ha añadido nombre como unico para evitar duplicidad. Se ha añadido validacion notblank a su dto. Se ha modificado la validacion y añadido metodo para que el nombre empieze siempre por mayuscula.
Préstamo: Se ha añadido el filtrado por fecha de inicio y fin y lo mismo con cliente. Se han añadido validaciones para cumplir los casos requeridos con mensajes de error personalizados.

Front: Paginación en español. Manejo de errores más agradable y eficientes. Botón desactivado en caso de campos vacíos. Operacón onDestroy para las suscripcciones

--- a/Front-End/src/app/client/client-edit/client-edit.component.html
+++ b/Front-End/src/app/client/client-edit/client-edit.component.html
@@ -5,7 +5,7 @@
   <h1>Crear autor</h1>
   }
 
-  <form #loanForm="ngForm">
+  <form #loanForm="ngForm" (focusin)="clearError()" (input)="clearError()">
     <mat-form-field>
       <mat-label>Identificador</mat-label>
       <input
@@ -30,6 +30,9 @@
       />
       <mat-error>El nombre no puede estar vacío</mat-error>
     </mat-form-field>
+    <mat-error *ngIf="error">
+      {{error}}
+    </mat-error>
   </form>
 
   <div class="buttons">
